--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1002.6KB/s(Youtube:不良林), server: 172.99.188.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇮🇹 意大利-201.0KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
-  - {name: 🇨🇦 加拿大-1.81MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇫🇷 法国-536.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 817, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-239.1KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-482.5KB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: 38.143.66.20, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇦🇺 澳大利亚-348.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-727.4KB/s(Youtube:不良林), server: node-us-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-us-c-01.texo.network, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.47MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-366.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.143.66.20, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇫🇷 法国-651.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-2.31MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.143.66.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-595.7KB/s(Youtube:不良林), server: 38.143.66.20, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-897.1KB/s(Youtube:不良林), server: 38.143.66.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-5.93MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
+  - {name: 🇺🇸 美国-3.89MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.59MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1002.6KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-201.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇫🇷 法国-536.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-482.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-348.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-727.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-651.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1002.6KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-201.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇫🇷 法国-536.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-482.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-348.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-727.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-651.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1002.6KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-201.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇫🇷 法国-536.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-482.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-348.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-727.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-651.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1002.6KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-201.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇫🇷 法国-536.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-482.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-348.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-727.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-651.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1002.6KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-201.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇫🇷 法国-536.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-482.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-348.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-727.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-651.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1002.6KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-201.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇫🇷 法国-536.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-482.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-348.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-727.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-651.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1002.6KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-201.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇫🇷 法国-536.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-482.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-348.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-727.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-651.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-897.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
