--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.143.66.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: 38.143.66.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-451.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-366.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇫🇷 法国-536.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 817, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.59MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-512.5KB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-5.93MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
+  - {name: 🇺🇸 美国-874.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-274.3KB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.54MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-727.4KB/s(Youtube:不良林), server: node-us-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-us-c-01.texo.network, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇫🇷 法国-743.6KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
   - {name: 🇨🇦 加拿大-1.19MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-580.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-917.9KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-536.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-512.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-874.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-727.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-743.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-536.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-512.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-874.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-727.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-743.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-536.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-512.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-874.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-727.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-743.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-536.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-512.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-874.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-727.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-743.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-536.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-512.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-874.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-727.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-743.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-536.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-512.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-874.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-727.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-743.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-366.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-536.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-512.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-874.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-727.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-743.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-580.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-917.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
